welcome.lessons.welcome.bat.bool2.AnswerCell.scala.error
answerCell:3: error: reassignment to val
if (isMom = true)
          ^answerCell:3: error: type mismatch;
 found   : Unit
 required: Boolean
if (isMom = true)
^